force-app/main/default/objects/DRC_NBC_Case_Product_Junction__c/DRC_NBC_Case_Product_Junction__c.object-meta.xml
<CustomObject>
    <label>Case Product</label>
    <nameField>
        <displayFormat>CPJ-{00000}</displayFormat>
        <label>Case Product Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Product Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>