force-app/main/default/objects/DRC_NBC_Case_Product_Junction__c/fields/DRC_NBC_Case__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Case_Product_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>