force-app/main/default/objects/DRC_NBC_Case_Product_Junction__c/fields/DRC_NBC_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Lot_Number__c</fullName>
    <label>Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>