force-app/main/default/objects/DRC_NBC_Case_Product_Junction__c/fields/DRC_NBC_Product__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Case_Product_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>