force-app/main/default/objects/DRC_NBC_Case_Product_Junction__c/fields/DRC_NBC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Quantity__c</fullName>
    <label>Lot Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>